[B]1.1.0[/B]
- big pile of fixes, should work now after long time!