@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.0" date="2010-04-20" >
+<scraper framework="1.0" date="2010-04-21" >
 	<CreateSearchUrl dest="3">
 		<RegExp input="$$1" output="&lt;url&gt;http://sratim.co.il/browse.php?cs=movies&q=\1|User-Agent=Mozilla%2F4.0%20(compatible%3B%20MSIE%207.0%3B%20Windows%20NT%206.0)&lt;/url&gt;" dest="3">
 			<expression noclean="1" />
@@ -26,28 +26,39 @@
 				<expression trim="1">&lt;div id="profilememo" style="font-size:14px;[^;]*;?text-align:justify;"&gt;(([^&lt;]*(&lt;br\s*/?&gt;)?[^&lt;]*)*)&lt;/div&gt;</expression>
 			</RegExp>
 			<RegExp input="$$1" output="\1" dest="7">
-				<expression noclean="1">title="[0-9]+ כוכבים(.*?)&lt;table</expression>
+				<expression noclean="1">class="Box_Blue"(.*?)class="profilelrgstars"</expression>
 			</RegExp>
 			<RegExp input="$$7" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="5+">
 				<expression repeat="yes" trim="1">&lt;a href="browse.php\?g=[^"]*"&gt;([^&lt;]*)&lt;/a&gt;</expression>
 			</RegExp>
-			<RegExp input="$$1" output="\1" dest="7">
-				<expression noclean="1">&lt;td class[^&gt;]*&gt;שחקנים:&lt;/td&gt;[^&lt;]*&lt;td&gt;(.*)&lt;/td&gt;</expression>
-			</RegExp>
 			<RegExp input="$$1" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="5+">
-				<!--<expression trim="1" repeat="yes">&lt;a href="/movies/companies/view.aspx\?id=.*?"&gt;(.*?)&lt;/a&gt;</expression>-->
-				<expression>&lt;td class[^&gt;]*&gt;הפקה:&lt;/td&gt;[^&lt;]*&lt;td&gt;(.{1,100})&lt;/tr&gt;&lt;tr&gt;&lt;td class="paramsub" valign="top" width="62"</expression>
+				<expression>&lt;td class[^&gt;]*&gt;הפקה:&lt;/td&gt;[^&lt;]*&lt;td&gt;([^&lt;]*)&lt;/td&gt;</expression>
 			</RegExp>
-			<RegExp input="$$7" output="&lt;actor&gt;&lt;name&gt;\1&lt;/name&gt;&lt;/actor&gt;" dest="5+">
+			<!-- actors upper list
+			<RegExp input="$$1" output="\1" dest="8">
+				<expression noclean="1">&lt;td class[^&gt;]*&gt;שחקנים:&lt;/td&gt;[^&lt;]*&lt;td&gt;(.*?)&lt;/td&gt;</expression>
+			</RegExp>
+			<RegExp input="$$8" output="&lt;actor&gt;&lt;name&gt;\1&lt;/name&gt;&lt;/actor&gt;" dest="5+">
 				<expression repeat="yes" trim="1">&lt;a href="profileview.php\?id=[^"]*"&gt;([^&lt;]*)&lt;/a&gt;</expression>
 			</RegExp>
-			<RegExp conditional="fullcredits" input="$$7" output="&lt;url function=&quot;GetActorDetails&quot;&gt;http://www.sratim.co.il/profileview.php?id=\1&lt;/url&gt;" dest="5+">
+			<RegExp conditional="fullcredits" input="$$8" output="&lt;url function=&quot;GetActorDetails&quot;&gt;http://www.sratim.co.il/profileview.php?id=\1&lt;/url&gt;" dest="5+">
 				<expression repeat="yes">&lt;a href="profileview.php\?id=([^"]*)"&gt;</expression>
 			</RegExp>
-			<RegExp input="$$1" output="\1" dest="7">
-				<expression noclean="1">&lt;td class[^&gt;]*&gt;בימוי:&lt;/td&gt;&lt;td&gt;(.*)&lt;/td&gt;</expression>
+			 -->
+			 <!-- actors lower list -->
+			 <RegExp input="$$1" output="\1" dest="8">
+				<expression noclean="1">&lt;td class="actorlistbg"[^&gt;]*&gt;(.*?)&lt;/table&gt;</expression>
 			</RegExp>
-			<RegExp input="$$7" output="&lt;director&gt;\1&lt;/director&gt;" dest="5+">
+			 <RegExp input="$$8" output="&lt;actor&gt;&lt;name&gt;\1&lt;/name&gt;&lt;/actor&gt;" dest="5+">
+				<expression repeat="yes" trim="1">&lt;a href="profileview.php\?id=[^"]*"&gt;&lt;b&gt;([^&lt;]*)&lt;/b&gt;</expression>
+			</RegExp>
+			<RegExp conditional="fullcredits" input="$$8" output="&lt;url function=&quot;GetActorDetails&quot;&gt;http://www.sratim.co.il/profileview.php?id=\1&lt;/url&gt;" dest="5+">
+				<expression repeat="yes">&lt;a href="profileview.php\?id=([^"]*)"&gt;&lt;b&gt;[^&lt;]*&lt;/b&gt;</expression>
+			</RegExp>
+			<RegExp input="$$1" output="\1" dest="9">
+				<expression noclean="1">&lt;td class[^&gt;]*&gt;בימוי:&lt;/td&gt;&lt;td&gt;(.*?)&lt;/td&gt;</expression>
+			</RegExp>
+			<RegExp input="$$9" output="&lt;director&gt;\1&lt;/director&gt;" dest="5+">
 				<expression repeat="yes" trim="1">&lt;a href="profileview.php\?id=[^"]*"&gt;([^&lt;]*)&lt;/a&gt;</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;year&gt;\1&lt;/year&gt;" dest="5+">
@@ -66,14 +77,32 @@
 			<RegExp input="$$1" output="&lt;thumb&gt;http://www.sratim.co.il/\1&lt;/thumb&gt;" dest="5+">
 				<expression trim="1">&lt;img class="lrg_cover" src="([^"]*)" alt="</expression>
 			</RegExp>
-			<RegExp conditional="imdbrating" input="$$1" output="&lt;url cache=&quot;tt\1-main.html&quot; function=&quot;GetIMDBDetails&quot;&gt;http://akas.imdb.com/title/\1/&lt;/url&gt;" dest="5+">
-				<expression trim="1">http://www.imdb.com/title/(tt[^"]+)"</expression>
+			<RegExp input="$$1" output="&lt;originaltitle&gt;\1&lt;/originaltitle&gt;" dest="5+">
+				<expression trim="1">&lt;div class="smtext" style="direction:ltr;text-align:right;"&gt;([^&lt;]*)&lt;/span&gt;</expression>
 			</RegExp>
-			<RegExp input="$$1" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="5+">
-				<expression trim="1">Star_IMDB.*?&lt;span.*?&gt;([0-9]+?) מדרגים&lt;/span&gt;</expression>
+			<RegExp conditional="imdbrating" input="$$1" output="&lt;chain function=&quot;GetIMDBRatingById&quot;&gt;\1&lt;/chain&gt;" dest="5+">
+				<expression trim="1">http://www.imdb.com/title/(tt[^"]+)"</expression>
 			</RegExp>
 			<RegExp conditional="fanart" input="$$1" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="5+">
 				<expression trim="1">http://www.imdb.com/title/(tt[^"]+)</expression>
+			</RegExp>
+			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet480p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
+				<RegExp input="$$1" output="\1" dest="6">
+					<expression noclean="1">&lt;div class="smtext" style="direction:ltr;text-align:right;"&gt;([^&lt;]*)&lt;/span&gt;</expression>
+				</RegExp>
+				<expression>480p</expression>
+			</RegExp>
+			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet720p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
+				<RegExp input="$$1" output="\1" dest="6">
+					<expression noclean="1">&lt;div class="smtext" style="direction:ltr;text-align:right;"&gt;([^&lt;]*)&lt;/span&gt;</expression>
+				</RegExp>
+				<expression>720p</expression>
+			</RegExp>
+			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet1080p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
+				<RegExp input="$$1" output="\1" dest="6">
+					<expression noclean="1">&lt;div class="smtext" style="direction:ltr;text-align:right;"&gt;([^&lt;]*)&lt;/span&gt;</expression>
+				</RegExp>
+				<expression>1080p</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
@@ -86,17 +115,64 @@
 			<expression noclean="1" />
 		</RegExp>
 	</GetActorDetails>
-	<GetIMDBDetails dest="3">
-		<RegExp input="$$5" output="&lt;details&gt;\1&lt;/details&gt;" dest="3">
-			<!--Get rating from imdb.com-->
-			<RegExp input="$$1" output="&lt;rating&gt;\1&lt;/rating&gt;&lt;votes&gt;\2&lt;/votes&gt;" dest="5">
-				<expression>&lt;span class="rating-rating"&gt;([0-9.]+).*?&gt;([0-9,]+) votes&lt;/a&gt;</expression>
-			</RegExp>
-			<!--Get top250 from imdb.com-->
-			<RegExp input="$$1" output="&lt;top250&gt;\1&lt;/top250&gt;" dest="5+">
-				<expression>Top 250 #([0-9]*)&lt;/</expression>
+	<GetHDTrailersnet480p dest="3">
+	<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse480pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1|User-Agent=XBMC/10.0&lt;/url&gt;&lt;/details&gt;" dest="3">
+			<RegExp input="$$1" output="\1-" dest="6">
+				<expression repeat="yes" fixchars="1" trim="1">([\w]+)</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
-	</GetIMDBDetails>
+	</GetHDTrailersnet480p>
+	<GetHDTrailersnet720p dest="3">
+		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse720pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1|User-Agent=XBMC/10.0&lt;/url&gt;&lt;/details&gt;" dest="3">
+			<RegExp input="$$1" output="\1-" dest="6">
+				<expression repeat="yes" fixchars="1" trim="1">([\w]+)</expression>
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+	</GetHDTrailersnet720p>
+	<GetHDTrailersnet1080p dest="3">
+		<RegExp input="$$6" output="&lt;details&gt;&lt;url function=&quot;Parse1080pTrailer&quot; cache=&quot;hd-trailers-\1.xml&quot;&gt;http://xbmc.hd-trailers.net/movie/\1|User-Agent=XBMC/10.0&lt;/url&gt;&lt;/details&gt;" dest="3">
+			<RegExp input="$$1" output="\1-" dest="6">
+				<expression repeat="yes" fixchars="1" trim="1">([\w]+)</expression>
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+	</GetHDTrailersnet1080p>
+	<Parse480pTrailer dest="5">
+		<!--Fetch 480p trailer link from hdtrailers.net-->
+		<RegExp input="$$1" output="&lt;details&gt;&lt;trailer&gt;http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
+			<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res480p</expression>
+		</RegExp>
+	</Parse480pTrailer>
+	<Parse720pTrailer dest="5">
+		<RegExp input="$$6" output="&lt;details&gt;&lt;trailer&gt;\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
+			<!--Fallback to fetch 480p trailer link if 720p is not available-->
+			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
+				<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res480p</expression>
+			</RegExp>
+			<!--Fetch 720p trailer link from hdtrailers.net-->
+			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
+				<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res720p</expression>
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+	</Parse720pTrailer>
+	<Parse1080pTrailer dest="5">
+		<RegExp input="$$6" output="&lt;details&gt;&lt;trailer&gt;\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
+			<!--Fallback to fetch 480p trailer link if 720p and 1080p are not available-->
+			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
+				<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res480p</expression>
+			</RegExp>
+			<!--Fallback to fetch 720p trailer link if 1080p is not available-->
+			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
+				<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res720p</expression>
+			</RegExp>
+			<!--Fetch 1080p trailer link from hdtrailers.net-->
+			<RegExp input="$$1" output="http://playlist.yahoo.com/makeplaylist.dll?sdm=web&amp;pt=rd&amp;sid=\1" dest="6">
+				<expression noclean="1">&quot;&gt;Trailer&lt;/td&gt;.*?sid=(\d*)&quot; rel=&quot;lightbox\[res1080p</expression>
+			</RegExp>
+			<expression noclean="1" />
+		</RegExp>
+	</Parse1080pTrailer>
 </scraper>
